main(tab, slider), about, community, join

--- a/community.html
+++ b/community.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="js/main.js" defer></script>
 </head>
+
 <body>
   <header id="header_sub">
     <div class="inner">
@@ -48,120 +50,326 @@
     </div>
   </header>
   <section class="content community">
-    <div class="inner">
-      <div class="top_box">
-        <div class="pic">
-          <img src="./img/multiple.jpg" alt="community image">
-        </div>
-        <div class="text_box">
-          <h1>COMMUNITY</h1>
-          <p>
-            Welcome to our Help Center! Write your question to the right and hopefully your answer will appear. <br><br>
-            Or just scroll down to the Board.
-          </p>
-        </div>
+    <div class="top_box">
+      <div class="pic">
+        <img src="./img/multiple.jpg" alt="community image">
       </div>
-      <h2>Board</h2>
-      <table>
-        <caption class="h">회원 자유 게시판</caption>
-        <thead>
-          <tr>
-            <th scope="col">번호</th>
-            <th scope="col">게시글제목</th>
-            <th scope="col">작성자</th>
-            <th scope="col">작성일</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>10</td>
-            <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
-            <td>홍길동</td>
-            <td>2022.05.09</td>
-          </tr>
-          <tr>
-            <td>9</td>
-            <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
-            <td>홍길동</td>
-            <td>2022.05.09</td>
-          </tr>
-          <tr>
-            <td>8</td>
-            <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
-            <td>홍길동</td>
-            <td>2022.05.09</td>
-          </tr>
-          <tr>
-            <td>7</td>
-            <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
-            <td>홍길동</td>
-            <td>2022.05.09</td>
-          </tr>
-          <tr>
-            <td>6</td>
-            <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
-            <td>홍길동</td>
-            <td>2022.05.09</td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
-            <td>홍길동</td>
-            <td>2022.05.09</td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
-            <td>홍길동</td>
-            <td>2022.05.09</td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
-            <td>홍길동</td>
-            <td>2022.05.09</td>
-          </tr>
-          <tr>
-            <td>2</td>
-            <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
-            <td>홍길동</td>
-            <td>2022.05.09</td>
-          </tr>
-          <tr>
-            <td>1</td>
-            <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
-            <td>홍길동</td>
-            <td>2022.05.09</td>
-          </tr>
-        </tbody>
-      </table>
-      <div class="pagination">
-        <a href="#" class="prev">
-          <i class="fas fa-angle-double-left"></i>
-        </a>
-        <a href="#" class="prev">
-          <i class="fas fa-angle-left"></i>
-        </a>
-        <p class="numbers">
-          <a href="#" class="on">1</a>
-          <a href="#">2</a>
-          <a href="#">3</a>
-          <a href="#">4</a>
-          <a href="#">5</a>
-          <a href="#">6</a>
-          <a href="#">7</a>
-          <a href="#">8</a>
-          <a href="#">9</a>
-          <a href="#">10</a>
+      <div class="text_box">
+        <h1>COMMUNITY</h1>
+        <p>
+          Welcome to our Help Center! Write your question to the right and hopefully your answer will appear. <br><br>
+          Or just scroll down to the Board.
         </p>
-        <a href="#" class="next">
-          <i class="fas fa-angle-right"></i>
-        </a>
-        <a href="#" class="next">
-          <i class="fas fa-angle-double-right"></i>
-        </a>
       </div>
     </div>
+    <!--// top_box -->
+    <div class="inner">
+      <div class="journal_list">
+      <h2>Journal</h2>
+      <ul>
+        <li>
+          <a href="#none">
+            <div class="text_box">
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <p>Lorem, ipsum dolor.</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#none">
+            <div class="pic">
+              <img src="./img/community/01.jpg" alt="">
+            </div>
+            <div class="text_box">
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <p>Lorem, ipsum dolor.</p>
+            </div>
+          </a>
+
+        </li>
+        <li>
+          <a href="#none">
+            <div class="text_box">
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <p>Lorem, ipsum dolor.</p>
+            </div>
+          </a>
+
+        </li>
+        <li>
+          <a href="#none">
+            <div class="text_box">
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <p>Lorem, ipsum dolor.</p>
+            </div>
+          </a>
+
+        </li>
+        <li>
+          <a href="#none">
+            <div class="text_box">
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <p>Lorem, ipsum dolor.</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#none">
+            <div class="text_box">
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <p>Lorem, ipsum dolor.</p>
+            </div>
+          </a>
+
+        </li>
+        <li>
+          <a href="#none">
+            <div class="pic">
+              <img src="./img/community/01.jpg" alt="">
+            </div>
+            <div class="text_box">
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <p>Lorem, ipsum dolor.</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#none">
+            <div class="pic">
+              <img src="./img/community/01.jpg" alt="">
+            </div>
+            <div class="text_box">
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <p>Lorem, ipsum dolor.</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#none">
+            <div class="text_box">
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <p>Lorem, ipsum dolor.</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#none">
+            <div class="pic">
+              <img src="./img/community/01.jpg" alt="">
+            </div>
+            <div class="text_box">
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <p>Lorem, ipsum dolor.</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#none">
+            <div class="text_box">
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <p>Lorem, ipsum dolor.</p>
+            </div>
+          </a>
+        </li>
+        <li>
+          <a href="#none">
+            <div class="text_box">
+              <h3>Lorem ipsum dolor sit amet.</h3>
+              <p>Lorem, ipsum dolor.</p>
+            </div>
+          </a>
+        </li>
+      </ul>
+    </div>
+    <!-- journal_list -->
+
+    <div class="faq">
+      <h2>Faq</h2>
+      <ul>
+        <li>
+          <div class="question">
+           <span>01</span>
+           <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+          <p class="answer">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam quam reprehenderit earum veritatis dicta iusto impedit labore maiores cupiditate aliquam, aliquid sint aut, ut repellat voluptatum quae perspiciatis molestiae est!
+          </p>
+        </li>
+        <li>
+          <div class="question">
+           <span>02</span>
+           <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+          <p class="answer">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam quam reprehenderit earum veritatis dicta iusto impedit labore maiores cupiditate aliquam, aliquid sint aut, ut repellat voluptatum quae perspiciatis molestiae est!
+          </p>
+        </li>
+        <li>
+          <div class="question">
+           <span>03</span>
+           <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+          <p class="answer">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam quam reprehenderit earum veritatis dicta iusto impedit labore maiores cupiditate aliquam, aliquid sint aut, ut repellat voluptatum quae perspiciatis molestiae est!
+          </p>
+        </li>
+        <li>
+          <div class="question">
+           <span>04</span>
+           <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+          <p class="answer">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam quam reprehenderit earum veritatis dicta iusto impedit labore maiores cupiditate aliquam, aliquid sint aut, ut repellat voluptatum quae perspiciatis molestiae est!
+          </p>
+        </li>
+        <li>
+          <div class="question">
+           <span>05</span>
+           <p>Lorem ipsum dolor sit amet.</p>
+          </div>
+          <p class="answer">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam quam reprehenderit earum veritatis dicta iusto impedit labore maiores cupiditate aliquam, aliquid sint aut, ut repellat voluptatum quae perspiciatis molestiae est!
+          </p>
+        </li>
+      </ul>
+    </div>
+    <div class="sns">
+      <h2>Sns</h2>
+      <ul>
+        <li>
+          <a href="#">
+            <div class="pic">
+              <img src="./img/community/01.jpg" alt="">
+            </div>
+            <span>Facebook</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <div class="pic">
+              <img src="./img/community/01.jpg" alt="">
+            </div>
+            <span>Insta</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <div class="pic">
+              <img src="./img/community/01.jpg" alt="">
+            </div>
+            <span>Youtube</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <div class="pic">
+              <img src="./img/community/01.jpg" alt="">
+            </div>
+            <span>Youtube</span>
+          </a>
+        </li>
+      </ul>
+    </div>
+
+      <div class="table">
+        <h2>Board</h2>
+        <table>
+          <caption class="h">회원 자유 게시판</caption>
+          <thead>
+            <tr>
+              <th scope="col">Number</th>
+              <th scope="col">Title</th>
+              <th scope="col">Write</th>
+              <th scope="col">Date</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>10</td>
+              <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
+              <td>art</td>
+              <td>2022.05.09</td>
+            </tr>
+            <tr>
+              <td>9</td>
+              <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
+              <td>art</td>
+              <td>2022.05.09</td>
+            </tr>
+            <tr>
+              <td>8</td>
+              <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
+              <td>art</td>
+              <td>2022.05.09</td>
+            </tr>
+            <tr>
+              <td>7</td>
+              <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
+              <td>art</td>
+              <td>2022.05.09</td>
+            </tr>
+            <tr>
+              <td>6</td>
+              <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
+              <td>art</td>
+              <td>2022.05.09</td>
+            </tr>
+            <tr>
+              <td>5</td>
+              <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
+              <td>art</td>
+              <td>2022.05.09</td>
+            </tr>
+            <tr>
+              <td>4</td>
+              <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
+              <td>art</td>
+              <td>2022.05.09</td>
+            </tr>
+            <tr>
+              <td>3</td>
+              <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
+              <td>art</td>
+              <td>2022.05.09</td>
+            </tr>
+            <tr>
+              <td>2</td>
+              <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
+              <td>art</td>
+              <td>2022.05.09</td>
+            </tr>
+            <tr>
+              <td>1</td>
+              <td><a href="#">Lorem ipsum dolor sit, amet consectetur adipisicing.</a></td>
+              <td>art</td>
+              <td>2022.05.09</td>
+            </tr>
+          </tbody>
+        </table>
+        <div class="pagination">
+          <a href="#" class="prev">
+            <i class="fas fa-angle-double-left"></i>
+          </a>
+          <a href="#" class="prev">
+            <i class="fas fa-angle-left"></i>
+          </a>
+          <p class="numbers">
+            <a href="#" class="on">1</a>
+            <a href="#">2</a>
+       
+          </p>
+          <a href="#" class="next">
+            <i class="fas fa-angle-right"></i>
+          </a>
+          <a href="#" class="next">
+            <i class="fas fa-angle-double-right"></i>
+          </a>
+        </div>
+        <!-- pagination -->
+      </div>
+      <!--// table -->
+    </div>
+    <!--// inner -->
   </section>
   <footer id="footer_sub">
     <div class="inner">
@@ -185,4 +393,5 @@
     </div>
   </footer>
 </body>
+
 </html>
