--- a/index.html
+++ b/index.html
@@ -1,221 +1,220 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>기업형레이아웃</title>
-    <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/main.js" defer></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nudie Jeans</title>
+  <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="css/style.css">
+  <script src="js/anime.js"></script>
+  <script src="js/main.js" defer></script>
 </head>
+
 <body>
-    <header id="header">
-        <div class="inner">
-            <h1><a href="index.html">DCODELAB</a></h1>
+  <header id="header">
+    <div class="inner">
+      <h1><a href="index.html">Nudie Jeans</a></h1>
+      <nav class="menuWeb">
+        <ul id="gnb">
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="youtube.html">YOUTUBE</a></li>
+          <li><a href="gallery.html">GALLERY</a></li>
+          <li><a href="community.html">COMMUNITY</a></li>
+          <li><a href="location.html">LOCATION</a></li>
+        </ul>
+        <ul class="util">
+          <li><a href="#">Contact</a></li>
+          <li><a href="join.html">Join</a></li>
+          <li><a href="#">Sitemap</a></li>
+        </ul>
+      </nav>
+      <a href="#" class="btnCall">
+        <span>메뉴호출</span>
+      </a>
+      <nav class="menuMo">
+        <h1>
+          <a href="index.html">DCODELAB</a>
+          <span>UI/UX DEVELOPMENT INSTITUTE</span>
+        </h1>
+        <ul id="gnbMo">
+          <li><a href="about.html">ABOUT</a></li>
+          <li><a href="youtube.html">YOUTUBE</a></li>
+          <li><a href="community.html">COMMUNITY</a></li>
+          <li><a href="gallery.html">GALLERY</a></li>
+          <li><a href="location.html">LOCATION</a></li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <!-- header -->
 
-           <nav class="menuWeb">
-                <ul id="gnb">
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="youtube.html">YOUTUBE</a></li>
-                    <li><a href="community.html">COMMUNITY</a></li>
-                    <li><a href="gallery.html">GALLERY</a></li>
-                    <li><a href="location.html">LOCATION</a></li>
-                </ul>
-               
-                <ul class="util">
-                    <li><a href="#">Contact</a></li>
-                    <li><a href="#">Help</a></li>
-                    <li><a href="#">Login</a></li>
-                    <li><a href="join.html">Join</a></li>
-                    <li><a href="#">Sitemap</a></li>
-                </ul>
-           </nav>
-
-           <a href="#" class="btnCall">
-               <span>메뉴호출</span>
-           </a>
-
-           <nav class="menuMo">
-               <h1>
-                   <a href="index.html">DCODELAB</a>
-                    <span>UI/UX DEVELOPMENT INSTITUTE</span>
-                </h1>
-
-                <ul id="gnbMo">
-                    <li><a href="about.html">ABOUT</a></li>
-                    <li><a href="youtube.html">YOUTUBE</a></li>
-                    <li><a href="community.html">COMMUNITY</a></li>
-                    <li><a href="gallery.html">GALLERY</a></li>
-                    <li><a href="location.html">LOCATION</a></li>
-                </ul>
-           </nav>
-
+  <div id="visual">
+    <ul class="panel">
+      <li class="con1 on">
+        <div class="text_box">
+          <span>Bake Your Own</span>
+          <h2>New Fit! <br><strong>Rad Rufus</strong> Baked by local denim dealers Strictly limited 25 pairs</h2>
+          <p>Ten stores, ten unique versions of our new fit, Rad Rufus, limited to 25 pieces per store.</p>
         </div>
-    </header>
-    <figure id="visual">
-        <video src="img/visual.mp4" autoplay loop muted></video>
-
-        <div class="inner">
-            <h1>INNOVATION</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur veniam velit mollitia, praesentium quos quia debitis harum quae earum modi.</p>
-
-            <a href="#">VIEW OUR PORTFOLIO</a>
+      </li>
+      <li class="con2">
+        <div class="text_box">
+          <span>Every pair of Nudie Jeans</span>
+          <h2>Free repairs Forever.</h2>
+          <p> comes with a promise of free repairs. And that promise is forever, no matter when, where, or how you got
+            them. Buying a pair of premium jeans is an investment, and since we provide the jeans, it’s only right we
+            take
+            care of the repairs.</p>
         </div>
-    </figure>
-
-    <section id="news">
-        <div class="inner">
-            <h1>RECENT NEWS</h1>
-            <div class="wrap">
-                <article>
-                    <div class="pic">
-                        <img src="img/news1.jpg" alt="new1이미지">
-                    </div>
-                    <h2><a href="#">Lorem, ipsum.</a></h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                </article>
-                <article>
-                    <div class="pic">
-                        <img src="img/news2.jpg" alt="new2이미지">
-                    </div>
-                    <h2><a href="#">Lorem, ipsum.</a></h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                </article>
-                <article>
-                    <div class="pic">
-                        <img src="img/news3.jpg" alt="new3이미지">
-                    </div>
-                    <h2><a href="#">Lorem, ipsum.</a></h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                </article>
-                <article>
-                    <div class="pic">
-                        <img src="img/news4.jpg" alt="new4이미지">
-                    </div>
-                    <h2><a href="#">Lorem, ipsum.</a></h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                </article>
-            </div>
+      </li>
+      <li class="con3">
+        <div class="text_box">
+          <span>No one is an island entirely on their own</span>
+          <h2>Island Life</h2>
+          <p>is whatever you make of it: a place for recreation or adventure. Pitch your tent wherever you please,
+            accidentally spot a UFO when you’re out birding, hit the beach to catch up on your reading, or why not go
+            for
+            a swim.</p>
         </div>
-    </section>
+      </li>
+    </ul>
+    <ul class="tab_list">
+      <li class="on"><a href="#">
+          <div><span>01</span>Bake Your Own</div>
+        </a></li>
+      <li><a href="#">
+          <div><span>02</span>Every pair of Nudie Jeans</div>
+        </a></li>
+      <li><a href="#">
+          <div><span>03</span>Island Life</div>
+        </a></li>
+    </ul>
 
-    <section id="brand">
-        <div class="inner">
-            <h1>BRAND IDENTITY</h1>
-            <div class="wrap">
-                <article>
-                    <i class="fas fa-barcode"></i>
-                    <h2>BRAND IDENTITY</h2>
-                    <p>Lorem ipsum dolor sit amet.</p>
-                    <a href="#">VIEW DETAIL</a>
-                </article>
-                <article>
-                    <img src="img/brand1.jpg" alt="브랜드 1 이미지">
-                </article>
-                <article>
-                    <img src="img/brand2.jpg" alt="브랜드2이미지">
-                </article>
-                <article>
-                    <img src="img/brand3.jpg" alt="브랜드3이미지">
-                </article>
-            </div>
+  </div>
+  <!--// visual -->
+
+  <main>
+    <div class="inner">
+      <section id="new">
+        <h2>New Arrivals</h2>
+        <ul>
+          <li>
+            <a href="#">
+              <div class="pic">
+                <img src="./img/main/new01.jpg" alt="">
+              </div>
+              <div class="text_box">
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, aut.</p>
+                <span>Lorem, ipsum.</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="pic">
+                <img src="./img/main/new02.jpg" alt="">
+              </div>
+              <div class="text_box">
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, aut.</p>
+                <span>Lorem, ipsum.</span>
+              </div>
+            </a>
+          </li>
+          <li>
+            <a href="#">
+              <div class="pic">
+                <img src="./img/main/new03.jpg" alt="">
+              </div>
+              <div class="text_box">
+                <h2>Lorem, ipsum dolor.</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero, aut.</p>
+                <span>Lorem, ipsum.</span>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <!--// new -->
+      <section id="about">
+        <h2>About</h2>
+        <div class="text_con">
+          <ul class="text_list">
+            <li class="on">
+              <div class="text_box">
+                <h3>Philosophy</h3>
+                <p><strong>Nudie Jeans is based on an idea. This idea is in turn composed of several concepts, beliefs,
+                    and a good portion of old fashioned fighting spirit. The pursuit of doing the opposite was one of
+                    the
+                    main
+                    reasons the brand got started, although not an end in itself. </strong> It was rather the passion
+                  for
+                  dry denim
+                  that pointed the brand in that direction. The raw, untreated fabric had at the time been falling into
+                  oblivion, and it wasn't sought after by the public.
+
+                </p>
+              </div>
+            </li>
+            <li>
+              <div class="text_box">
+                <h3>Nudie Jeans as a workplace </h3>
+                <p><strong>At Nudie Jeans, we consider our employees our most important resource alongside our products.
+                    They provide the vigor and strength needed for Nudie Jeans’ future.</strong></p>
+                <p>The organization at the Nudie Jeans head office in Gothenburg covers all aspects of the business
+                  including design, product development, sustainability, wholesale, retail, e-commerce, finance,
+                  marketing,
+                  supply chain management, customer service, IT and HR.</p>
+              </div>
+            </li>
+            <li>
+              <div class="text_box">
+                <h3>Finance</h3>
+                <p><strong>The organizational structure below shows the Nudie Jeans company group, consisting of
+                    thirteen
+                    entities where Nudie Jeans marketing is the purchasing part and all transactions for the production
+                    of
+                    our products are through this entity.</strong> The figures below are for the Nudie Jeans AB group
+                  (not
+                  including
+                  Svenska Jeans Holding, Nudie Jeans Co AB, and Kamgarn AB).</p>
+              </div>
+            </li>
+          </ul>
         </div>
-    </section>
-
-    <section id="banner">
-        <div class="inner">
-            <h1>Lorem ipsum dolor sit amet consectetur.</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus alias illo quia nihil optio officiis iste, ullam ad.</p>
-        </div>
-    </section>
-
-    <section id="comments">
-        <div class="inner">
-            <h1>RECENT COMMENTS</h1>
-
-            <ul>
-                <li>
-                    <a href="#">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, incidunt.
-                    </a>
-                    <span>2022.05.04</span>
-                </li>
-                <li>
-                    <a href="#">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, incidunt.
-                    </a>
-                    <span>2022.05.04</span>
-                </li>
-                <li>
-                    <a href="#">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, incidunt.
-                    </a>
-                    <span>2022.05.04</span>
-                </li>
-                <li>
-                    <a href="#">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, incidunt.
-                    </a>
-                    <span>2022.05.04</span>
-                </li>
-                <li>
-                    <a href="#">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, incidunt.
-                    </a>
-                    <span>2022.05.04</span>
-                </li>
-                <li>
-                    <a href="#">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, incidunt.
-                    </a>
-                    <span>2022.05.04</span>
-                </li>
-                <li>
-                    <a href="#">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, incidunt.
-                    </a>
-                    <span>2022.05.04</span>
-                </li>
-                <li>
-                    <a href="#">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, incidunt.
-                    </a>
-                    <span>2022.05.04</span>
-                </li>
-                <li>
-                    <a href="#">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, incidunt.
-                    </a>
-                    <span>2022.05.04</span>
-                </li>
-                <li>
-                    <a href="#">
-                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint, incidunt.
-                    </a>
-                    <span>2022.05.04</span>
-                </li>
-            </ul>
-        </div>
-    </section>
-
-    <footer id="footer">
-        <div class="inner">
-            <h1>DCODELAB</h1>
-            <ul>
-                <li><a href="#">Policy</a></li>
-                <li><a href="#">Terms</a></li>
-                <li><a href="#">Customer</a></li>
-                <li><a href="#">Contact us</a></li>
-            </ul>
-
-            <address>
-                address:DCODELAB, 60, Sajik-ro 8-gil, Jongro-gu, Seoul, Republic of Korea(Post Code 03172) <br/>
-                TEL: +82-2-2100-2114 FAX:+82-2-2100-7999
-            </address>
-
-            <p>Copyright &copy; 2022 DCODELAB ALL Right reserved.</p>
-        </div>
-    </footer>
+        <ul class="btn">
+          <li><a href="#none" class="prev"><i class="fas fa-chevron-left"></i></a></li>
+          <li><a href="#none" class="next"><i class="fas fa-chevron-right"></i></a></li>
+        </ul>
+      </section>
+      <!--// about  -->
+    </div>
+    <!--// inner  -->
+  </main>
+  <!--// main -->
+  <footer id="footer">
+    <div class="inner">
+      <h1>Nudie Jeans</h1>
+      <ul>
+        <li><a href="#">Policy</a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Customer</a></li>
+        <li><a href="#">Contact us</a></li>
+      </ul>
+      <address>
+        Nudie Jeans Marketing AB
+        Västra Hamngatan 6
+        SE-411 17 Göteborg
+        Sweden <br />
+        Phone: +46 10 1515600
+        Fax: +46 10 15 15 699
+      </address>
+      <p>© 2022 Nudie Jeans Co. All rights reserved. <br>
+        Privacy, Cookie Policy & Cookie Settings</p>
+  </footer>
 </body>
+
 </html>
