--- a/about.html
+++ b/about.html
@@ -7,9 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ABOUT</title>
   <script src="https://kit.fontawesome.com/16312fa746.js" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <script src="js/main.js" defer></script>
 </head>
+
 <body>
   <header id="header_sub">
     <div class="inner">
@@ -51,7 +53,7 @@
   </header>
 
   <section class="content about">
-    <div class="inner"> 
+    <div class="inner">
       <div class="about_box">
         <div class="pic">
           <img src="./img/big/8.jpg" alt="">
@@ -60,15 +62,15 @@
           <h1>About</h1>
           <h2>Get the balance right</h2>
           <p>
-            Nudie Jeans is based on an idea. This idea is in turn composed of several concepts, beliefs, and a good portion of old fashioned fighting spirit. The pursuit of doing the opposite was one of the main reasons the brand got started, although not an end in itself. 
+            Nudie Jeans is based on an idea. This idea is in turn composed of several concepts, beliefs, and a good
+            portion of old fashioned fighting spirit. The pursuit of doing the opposite was one of the main reasons the
+            brand got started, although not an end in itself.
           </p>
         </div>
       </div>
       <!-- about_box -->
       <div class="is_about">
         <h2>Is About</h2>
-        <p></p>
-
         <ul>
           <li>
             <a href="#">
@@ -90,7 +92,8 @@
               <div class="text_box">
                 <span>Repair</span>
                 <h3>Free repairs forever</h3>
-                <p>Every pair of Nudie Jeans comes with a promise of free repairs. No matter when or where you got them.</p>
+                <p>Every pair of Nudie Jeans comes with a promise of free repairs. No matter when or where you got them.
+                </p>
               </div>
             </a>
           </li>
@@ -108,10 +111,51 @@
           </li>
         </ul>
       </div>
+      <!-- is_about -->
+      <div class="about_with">
+        <h2>about with</h2>
+        <article>
+          <div class="text_con">
+            <p>Our jeans are not designed to be used a few times and then thrown away. We cherish the well-worn and
+              mended. Jeans that become a part of ourselves when worn a long time – a second skin. A pair of dry denim
+              jeans is the materialized version of our values: No extra treatment or washes. Made with 100% organic
+              cotton. </p>
+          </div>
+          <div class="text_line">
+            <h3>Nudie Jeans as a workplace </h3>
+            <p>At Nudie Jeans, we consider our employees our most important resource alongside our products. They
+              provide the vigor and strength needed for Nudie Jeans’ future.</p>
+          </div>
+        </article>
+        <article>
+          
+          <div>
+            <div class="pic">
+              <img src="./img/about_list01.jpg" alt="">
+            </div>
+          </div>
+          <div class="text_line">
+            <h3>It all starts with a <br> pair of drys.</h3>
+            <p><strong>Ever since we started</strong>, we've loved the idea that your drys, sooner or later, start
+              reflecting what you've been through together. There's soul, and great stories, buried deep in those twill
+              lines.</p>
+            <p>What's even greater is the people who share their stories with us, and those who donate their jeans to
+              our Re-use program. How you break in denim and when to wash is a matter of personal preference. It's your
+              journey, and ultimately up to you to decide how far you want to take it.</p>
+          </div>
+        </article>
+        <article>
+          <div class="pic">
+            <img src="./img/about_list01.jpg" alt="">
+          </div>
+          <div class="text_box">
+            <h3>We are not doing it for the awards...</h3>
+            <p>but it is sure nice to get appreciation for the work we do! <br>Over the years we have won a lot of prizes and awards, mostly in the field of entrepreneurship and sustainability. </p>
+          </div>
 
-
-
-
+        </article>
+      </div>
+      <!-- about_with -->
       <div class="Organization">
         <h2>Organization</h2>
         <ul>
@@ -199,7 +243,7 @@
           </li>
         </ul>
       </div>
-      <!-- vivision -->
+      <!-- Organization -->
     </div>
   </section>
   <!-- section -->
@@ -226,5 +270,4 @@
   </footer>
   <!-- footer_sub -->
 </body>
-
 </html>
